--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -113,3 +113,4 @@
 @import "custom/custom-newsletter";
 @import "custom/custom-partners";
 @import "custom/quick-order";
+@import "custom/custom-njoy-the-loop";
