--- a/templates/pages/custom/product/product-the-loop.html
+++ b/templates/pages/custom/product/product-the-loop.html
@@ -1,11 +1,11 @@
 {{#partial "page"}}
 
 <div class="custom-product-loop">
-    <section class="nav">
+    <section class="loop-nav">
         <ul>
             <li>Overview</li>
             <li>Tech Specs</li>
-            <li>Pre-Order</li>
+            <li class="button--primary">Pre-Order</li>
         </ul>
     </section>
 
