--- a/templates/pages/custom/product/product-the-loop.html
+++ b/templates/pages/custom/product/product-the-loop.html
@@ -11,17 +11,30 @@
 
     <section class="">
         <div class="loop-introduction">
-            <div class="">
-                <h1>The Loop Introduction</h1>
+            <div class="intro-image">
+                <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/522/RECHARGE_copy__67404.1530153514.1280.1280.png" alt="" class="image">
+            </div>
+            <div class="intro-and-price">
+                <h1 class="strong">The Loop</h1>
+                <p class="description">
+                    With 2 Sticks, 36-hour charging case and advanced nicotine delivery, you've got an endless pack of smokes in your pocket.
+                </p>
+                <div class="price">
+                    <span>$34.99</span>
+                    <span><a href="#">Pre-Order Today ></a></span>
+                </div>
             </div>
         </div>
 
         <div class="loop-video">
-            <h3>Video Embed</h3>
+            <!--<iframe width="600" height="400" src="https://www.youtube.com/embed/cLtRhVpwOgA" frameborder="1" allow="autoplay; encrypted-media" allowfullscreen></iframe>-->
+            <object data="https://www.youtube.com/embed/cLtRhVpwOgA"
+                    width="650" height="400"></object>
         </div>
 
         <div class="loop-gallery">
-            <h3>Gallery Section</h3>
+            <h1 class="title">What's in the box</h1>
+            <h4 class="subtitle">- Loop Pods sold separately -</h4>
         </div>
 
         <div class="loop-specs">
