Feat(*) desktop page without gallery

--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -9,7 +9,6 @@
 		{{{ head.config }}}
 		{{#block "head"}} {{/block}}
 		<link href="{{ head.favicon }}" rel="shortcut icon">
-		<link rel="stylesheet" href="https://unpkg.com/tippy.js@1.4.2/dist/tippy.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		{{{stylesheet '/assets/css/theme.css'}}}
 		{{ getFontsCollection }}
@@ -94,7 +93,7 @@
 		{{{footer.scripts}}}
 		{{{snippet 'footer'}}}
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.4.1/core.js"></script>
-		<script src="https://unpkg.com/tippy.js@1.4.2/dist/tippy.min.js"></script>
+		<script src="https://unpkg.com/tippy.js@2.5.3/dist/tippy.all.min.js"></script>
 		<script>
 		// Smooth Scroll @deepak
         $("#scrollOnClick").click(function() {
