--- a/assets/scss/custom/custom-product.scss
+++ b/assets/scss/custom/custom-product.scss
@@ -698,16 +698,27 @@ Custom styles for 'The Loop' product
 .custom-product-loop {
     width: 70vw;
     margin: 100px 15vw;
-    .loop-specs {
+    .loop-nav {
         width: 100%;
-    }
-    .loop-gallery {
-        width: 100%;
+        position: relative;
+        left: 40vw;
+        ul > li {
+            list-style: none;
+            display: inline-block;
+            height: 30px;
+            width: 120px;
+            margin-left: 10px;
+            padding: 5px 0;
+            vertical-align: center;
+            align-content: center;
+            text-align: center;
+            cursor: pointer;
+        }
     }
     .loop-introduction {
         position: relative;
         width: 50vw;
-        margin: 50px 5vw;
+        margin: 50px 7vw;
         display: inline-flex;
         flex-direction: row;
         justify-content: space-evenly;
@@ -744,7 +755,7 @@ Custom styles for 'The Loop' product
     .loop-video {
         position: relative;
         width: 50vw;
-        margin: 50px 5vw;
+        margin: 50px 7vw;
         display: inline-flex;
         flex-direction: row;
         justify-content: space-evenly;
@@ -752,7 +763,7 @@ Custom styles for 'The Loop' product
     .loop-gallery {
         position: relative;
         width: 50vw;
-        margin: 50px 5vw;
+        margin: 50px 7vw;
         text-transform: capitalize;
         text-align: center;
         h1.title {
@@ -766,22 +777,55 @@ Custom styles for 'The Loop' product
             font-weight: 600;
             margin-top: 1px !important;
         }
-    }
-    .loop-nav {
-        width: 100%;
-        position: relative;
-        left: 40vw;
-        ul > li {
-            list-style: none;
-            display: inline-block;
-            height: 30px;
-            width: 120px;
-            margin-left: 10px;
-            padding: 5px 0;
-            vertical-align: center;
-            align-content: center;
-            text-align: center;
-            cursor: pointer;
+        .picture-set {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+            figure {
+                max-width: 200px;
+                height: 100%;
+                margin: 10px;
+                figcaption {
+                    font-size: 16px;
+                    font-weight: bolder;
+                }
+            }
+            img {
+                height: 300px;
+                width: 150px;
+            }
         }
     }
+    .loop-specs {
+        position: relative;
+        width: 50vw;
+        margin: 0 7vw;
+        display: inline-flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        .title {
+            position: relative;
+            top: 0;
+            left: 0;
+            width: 300px;
+            font-size: 24px;
+            font-weight: bolder;
+            text-transform: capitalize;
+            margin-right: 1em
+        }
+        .description{
+            font-size: 18px;
+            font-weight: 400;
+            width: 375px;
+        }
+    }
+}
+
+.tech-spec-image {
+    width: 50vw;
+    margin: 5px 7vw 50px 7vw;
+    /*margin-left: 7vw;
+    margin-right: 7vw;
+    margin-top: 5px;
+    margin-bottom: 50px;*/
 }
