--- a/templates/pages/custom/product/product-the-loop.html
+++ b/templates/pages/custom/product/product-the-loop.html
@@ -35,13 +35,52 @@
         <div class="loop-gallery">
             <h1 class="title">What's in the box</h1>
             <h4 class="subtitle">- Loop Pods sold separately -</h4>
+            <div class="picture-set">
+                <figure>
+                    <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/522/RECHARGE_copy__67404.1530153514.1280.1280.png"
+                         alt="picture one">
+                    <figcaption>2 Rechargable battery sticks</figcaption>
+                </figure>
+                <figure>
+                    <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/522/RECHARGE_copy__67404.1530153514.1280.1280.png"
+                         alt="picture one">
+                    <figcaption>Sleek charging case</figcaption>
+                </figure>
+                <figure>
+                    <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/522/RECHARGE_copy__67404.1530153514.1280.1280.png"
+                         alt="picture one">
+                    <figcaption>Rapid Charge Accessory</figcaption>
+
+                </figure>
+                <figure>
+                    <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/522/RECHARGE_copy__67404.1530153514.1280.1280.png"
+                         alt="picture one">
+                    <figcaption>USB-USBc Power Cable</figcaption>
+                </figure>
+            </div>
         </div>
 
         <div class="loop-specs">
-            <h3>Sleek Charging case</h3>
-            <h3>Duelling Batteries</h3>
-            <h3>Packs a Punch</h3>
+            <h1 class="title">Sleek Charging Case</h1>
+            <p class="description">
+                Keep your sticks charged on the go. The Loop carrying case delivers 36 hours of dual-stick charging in a sleek device. No matter how much you use it, 1 stick is always ready to go.
+            </p>
         </div>
+        <img class="tech-spec-image" src="http://via.placeholder.com/650x400" alt="placeholder">
+        <div class="loop-specs">
+            <h1 class="title">Duelling Batteries</h1>
+            <p class="description">
+                The cylinder-shaped battery sticks mirror the form of cigarettes, and are compatible with replaceble Loop Pods that come in many flavors. Switch, twist and enjoy.
+            </p>
+        </div>
+        <img class="tech-spec-image" src="http://via.placeholder.com/650x400" alt="placeholder">
+        <div class="loop-specs">
+            <h1 class="title">Packs A Punch</h1>
+            <p class="description">
+                Loop hits like a cigarette and doesn't let up. With advanced nicotine delivery system it remainst consistent even as the battery wanes.
+            </p>
+        </div>
+        <img class="tech-spec-image" src="http://via.placeholder.com/650x400" alt="placeholder">
     </section>
 </div>
 
