Feat(*) responsive grid system

--- a/templates/pages/custom/product/product-the-loop.html
+++ b/templates/pages/custom/product/product-the-loop.html
@@ -1,15 +1,83 @@
 {{#partial "page"}}
-
-<div class="custom-product-loop">
-    <section class="loop-nav">
+<div class="the-loop">
+    <div class="container">
+        <div class="row loop--nav">
+            <ul class="loop--nav">
+                <li><a href="#"></a>Overview</li>
+                <li><a href="#"></a>Tech Specs</li>
+                <li class="order"><a href="#"></a>Order</li>
+            </ul>
+        </div>
+        <div class="row loop--intro">
+            <div class="col-5">
+                <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/522/RECHARGE_copy__67404.1530153514.1280.1280.png" alt="the loop">
+            </div>
+            <div class="col-7">
+                <h1 class="strong">The Loop</h1>
+                <p class="description">
+                    With 2 Sticks, 36-hour charging case and advanced nicotine delivery, you've got an endless pack of smokes in your pocket.
+                </p>
+                <div class="price">
+                    <span>$34.99</span>
+                    <span><a href="#">Pre-Order Today ></a></span>
+                </div>
+            </div>
+        </div>
+        <div class="row loop--video">
+            <div class="col-12">
+                <object class="vid" data="https://www.youtube.com/embed/cLtRhVpwOgA"
+                        width="650" height="400"></object>
+            </div>
+        </div>
+    </div>
+</div>
+<!--<div class="custom-product-loop container">
+    <section class="loop-nav hide-on-mobile">
         <ul>
             <li>Overview</li>
             <li>Tech Specs</li>
-            <li class="button--primary">Pre-Order</li>
+            <li class="button&#45;&#45;primary">Pre-Order</li>
         </ul>
     </section>
+&lt;!&ndash;
+    <div class="container__row">
+        <div class="container__row-4">
+            <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/522/RECHARGE_copy__67404.1530153514.1280.1280.png"
+                 alt="" class="loop-image">
+        </div>
+        <div class="container__row-4">
+            <div class="intro-and-price">
+                <h1 class="strong">The Loop</h1>
+                <p class="description">
+                    With 2 Sticks, 36-hour charging case and advanced nicotine delivery, you've got an endless pack of smokes in your pocket.
+                </p>
+                <div class="price">
+                    <span>$34.99</span>
+                    <span><a href="#">Pre-Order Today ></a></span>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <section class="">
+    <div class="container__row">
+        <div class="container__row-12">
+            <object class="vid" data="https://www.youtube.com/embed/cLtRhVpwOgA"
+                    width="650" height="400"></object>
+        </div>
+    </div>
+
+    <div class="container__row">
+        <div class="container__row-4">
+            <h1 class="title">Sleek Charging Case</h1>
+        </div>
+        <div class="container__row-4">
+            <p class="description">
+                Keep your sticks charged on the go. The Loop carrying case delivers 36 hours of dual-stick charging in a sleek device. No matter how much you use it, 1 stick is always ready to go.
+            </p>
+        </div>
+    </div>&ndash;&gt;
+
+&lt;!&ndash;    <section class="">
         <div class="loop-introduction">
             <div class="intro-image">
                 <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/522/RECHARGE_copy__67404.1530153514.1280.1280.png" alt="" class="image">
@@ -27,7 +95,7 @@
         </div>
 
         <div class="loop-video">
-            <!--<iframe width="600" height="400" src="https://www.youtube.com/embed/cLtRhVpwOgA" frameborder="1" allow="autoplay; encrypted-media" allowfullscreen></iframe>-->
+            &lt;!&ndash;<iframe width="600" height="400" src="https://www.youtube.com/embed/cLtRhVpwOgA" frameborder="1" allow="autoplay; encrypted-media" allowfullscreen></iframe>&ndash;&gt;
             <object data="https://www.youtube.com/embed/cLtRhVpwOgA"
                     width="650" height="400"></object>
         </div>
@@ -77,12 +145,13 @@
         <div class="loop-specs">
             <h1 class="title">Packs A Punch</h1>
             <p class="description">
-                Loop hits like a cigarette and doesn't let up. With advanced nicotine delivery system it remainst consistent even as the battery wanes.
+                Loop hits like a cigarette and doesn't let up. With advanced nicotine delivery system it remains consistent even as the battery wanes.
             </p>
         </div>
         <img class="tech-spec-image" src="http://via.placeholder.com/650x400" alt="placeholder">
-    </section>
-</div>
+    </section>&ndash;&gt;
+</div>-->
+
 
 {{/partial}}
 
