Feat(*) responsive grid system

--- a/templates/pages/custom/product/product-the-loop.html
+++ b/templates/pages/custom/product/product-the-loop.html
@@ -29,6 +29,82 @@
                         width="650" height="400"></object>
             </div>
         </div>
+        <div class="row loop-gallery">
+            <h1 class="title">
+                What's in the box
+            </h1>
+            <h4 class="subtitle">
+                - Loop Pods sold separately -
+            </h4>
+            <div class="col-3">
+                <figure>
+                        <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/522/RECHARGE_copy__67404.1530153514.1280.1280.png"
+                             alt="picture one">
+                        <figcaption>2 Rechargeable battery sticks</figcaption>
+                </figure>
+            </div>
+            <div class="col-3">
+                <figure>
+                    <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/522/RECHARGE_copy__67404.1530153514.1280.1280.png"
+                         alt="picture one">
+                    <figcaption>Sleek charging case</figcaption>
+                </figure>
+            </div>
+            <div class="col-3">
+                <figure>
+                    <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/522/RECHARGE_copy__67404.1530153514.1280.1280.png"
+                         alt="picture one">
+                    <figcaption>Rapid Charge Accessory</figcaption>
+
+                </figure>
+            </div>
+            <div class="col-3">
+                <figure>
+                    <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/522/RECHARGE_copy__67404.1530153514.1280.1280.png"
+                         alt="picture one">
+                    <figcaption>USB-USBc Power Cable</figcaption>
+                </figure>
+            </div>
+        </div>
+        <div class="row loop--specs">
+            <div class="col-6 spec-title">
+                <h1>Sleek Charging Case</h1>
+            </div>
+            <div class="col-6 spec-desc">
+                <p class="description">
+                    Keep your sticks charged on the go. The Loop carrying case delivers 36 hours of dual-stick charging in a sleek device. No matter how much you use it, 1 stick is always ready to go.
+                </p>
+            </div>
+            <div class="col-12 spec-image">
+                <img src="http://via.placeholder.com/650x400" alt="placeholder">
+            </div>
+        </div>
+        <div class="row loop--specs">
+            <div class="col-4 spec-title">
+                <h1>Duelling Batteries</h1>
+            </div>
+            <div class="col-8 spec-desc">
+                <p class="description">
+                    The cylinder-shaped battery sticks mirror the form of cigarettes, and are compatible with replaceable Loop Pods that come in many flavors. Switch, twist and enjoy.
+                </p>
+            </div>
+            <div class="col-12 spec-image">
+                <img src="http://via.placeholder.com/650x400" alt="placeholder">
+            </div>
+        </div>
+        <div class="row loop--specs">
+            <div class="col-4 spec-title">
+                <h1>Packs A Punch</h1>
+            </div>
+            <div class="col-8 spec-desc">
+                <p class="description">
+                    Loop hits like a cigarette and doesn't let up. With advanced nicotine delivery system it remains consistent even as the battery wanes.
+                </p>
+            </div>
+            <div class="col-12 spec-image">
+                <img src="http://via.placeholder.com/650x400" alt="placeholder">
+            </div>
+        </div>
     </div>
 </div>
 <!--<div class="custom-product-loop container">
