--- a/assets/scss/custom/custom-the-loop.scss
+++ b/assets/scss/custom/custom-the-loop.scss
@@ -108,6 +108,9 @@
     .hidden-sm {
       display: block;
     }
+    @media only screen and (max-width: $breakpoint-small) {
+      text-align: center;
+    }
   }
 
 
@@ -118,6 +121,9 @@
     ul {
       text-align: right;
       height: 30px;
+      @media only screen and (max-width: $breakpoint-small) {
+        text-align: center;
+      }
       li {
         text-align: center;
         display: inline;
@@ -148,8 +154,13 @@
     img {
       max-height: 65%;
       max-width: 65%;
+      @media only screen and (max-width: $breakpoint-small) {
+        max-height: 90%;
+        max-width: 90%;
+      }
     }
     h1.strong {
+      font-size: 2.3em;
       font-weight: 800;
       text-transform: uppercase;
     }
@@ -184,6 +195,65 @@
       left: 0;
       width: 100%;
       height: 100%;
+    }
+  }
+  .loop-gallery {
+    position: relative;
+    max-width: 80%;
+    margin: 50px 8vw;
+    h1, h4 {
+      text-align: center;
+      text-transform: capitalize;
+    }
+    h1.title {
+      font-weight: 600;
+      font-size: 2.3em;
+    }
+    h4.subtitle {
+      font-weight: 800;
+      font-style: italic;
+      font-size: 1.23em;
+      margin-top: 0 !important;
+    }
+    figure {
+      height: 100%;
+      margin: 10px;
+      figcaption {
+        text-align: center;
+        text-transform: capitalize;
+        font-size: 16px;
+        font-weight: bolder;
+      }
+    }
+    img {
+      max-height: 100%;
+      max-width: 100%;
+    }
+  }
+  .loop--specs {
+    position: relative;
+    max-width: 80%;
+    margin: 50px 8vw;
+    .spec-title {
+      position: relative;
+      top: 0;
+      left: 0;
+      font-weight: bolder;
+      h1 {
+        font-size: 1.53em;
+        margin-top: 0 !important;
+        @media only screen and (max-width: $breakpoint-small) {
+          font-size: 1.82em;
+        }
+      }
+    }
+    .spec-desc {
+      font-size: 1.53em;
+      font-weight: 400;
+    }
+    .spec-image {
+      max-width: 100%;
+      max-height: 100%;
     }
   }
   // Page elements end
