--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -9,6 +9,10 @@
 		{{{ head.config }}}
 		{{#block "head"}} {{/block}}
 		<link href="{{ head.favicon }}" rel="shortcut icon">
+		<link rel="stylesheet"
+			  href="https://unpkg.com/purecss-components@0.0.12/dist/pure-components.css"
+			  integrity="sha384-3vxDvOU9lXU+bcgTkQNhnflfhRt/EFEGLtd3jQn8vQRGGQlpBX9VOq4oIufzLOO9"
+			  crossorigin="anonymous">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		{{{stylesheet '/assets/css/theme.css'}}}
 		{{ getFontsCollection }}
@@ -93,7 +97,6 @@
 		{{{footer.scripts}}}
 		{{{snippet 'footer'}}}
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.4.1/core.js"></script>
-		<script src="https://unpkg.com/tippy.js@2.5.3/dist/tippy.all.min.js"></script>
 		<script>
 		// Smooth Scroll @deepak
         $("#scrollOnClick").click(function() {
@@ -104,9 +107,9 @@
             } else {
                 window.location.href="/";
             }
-
         });
 		// End - smooth scroll
+		// Tippy Start
         window._getCookie = function (name) {
           var nameEQ = name + "=";
           var ca = document.cookie.split(';');
