--- a/templates/pages/custom/product/product-the-loop.html
+++ b/templates/pages/custom/product/product-the-loop.html
@@ -29,37 +29,28 @@
                         width="650" height="400"></object>
             </div>
         </div>
-        <div class="row loop-gallery pcssc-popover">
+        <div class="row loop-gallery">
             <h1 class="title">
                 What's in the box
             </h1>
             <h4 class="subtitle">
                 - Loop Pods sold separately -
             </h4>
-            <div class="col-3" tabindex="0" class="pure-button popover-toggle popover-toggle-dismissable popover-dismissable-right">
+            <div class="col-3" id="showPopOne">
                 <figure id="galleryOne">
                         <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/522/RECHARGE_copy__67404.1530153514.1280.1280.png"
                              alt="picture one">
                         <figcaption>2 Rechargeable battery sticks</figcaption>
                 </figure>
             </div>
-            <div class="popover popover-bottom">
-                <div class="arrow left-arrow"></div>
-                <h3 class="popover-title">2 Rechargeable battery sticks</h3>
-                <div class="popover-content">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    </p>
-                </div>
-            </div>
-            <div class="col-3">
+            <div id="showPopTwo" class="col-3">
                 <figure id="galleryTwo">
                     <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/522/RECHARGE_copy__67404.1530153514.1280.1280.png"
                          alt="picture one">
                     <figcaption>Sleek charging case</figcaption>
                 </figure>
             </div>
-            <div class="col-3">
+            <div id="showPopThree" class="col-3">
                 <figure id="galleryThree">
                     <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/522/RECHARGE_copy__67404.1530153514.1280.1280.png"
                          alt="picture one">
@@ -67,7 +58,7 @@
 
                 </figure>
             </div>
-            <div class="col-3">
+            <div id="showPopFour" class="col-3">
                 <figure id="galleryFour">
                     <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/522/RECHARGE_copy__67404.1530153514.1280.1280.png"
                          alt="picture one">
@@ -115,6 +106,22 @@
             </div>
         </div>
     </div>
+</div>
+<div id="galleryPopOne" style="display: none;">
+    <h4>2 Rechargeable Battery Sticks</h4>
+    <p>Lorem ipsum dolor sit amet, sed in dicant imperdiet, possit labitur splendide sit ut. Eu dicam inimicus his, in eam inermis delicata theophrastus, dicit eruditi recusabo at sed. Cum id nisl euripidis, liber fabulas contentiones eum in, cu per ullum option vulputate. Expetenda interesset te mel, id usu viris sensibus, mei te perfecto accusata.</p>
+</div>
+<div id="galleryPopTwo" style="display: none;">
+    <h4>Sleek Charging Case</h4>
+    <p>Lorem ipsum dolor sit amet, sed in dicant imperdiet, possit labitur splendide sit ut. Eu dicam inimicus his, in eam inermis delicata theophrastus, dicit eruditi recusabo at sed. Cum id nisl euripidis, liber fabulas contentiones eum in, cu per ullum option vulputate. Expetenda interesset te mel, id usu viris sensibus, mei te perfecto accusata.</p>
+</div>
+<div id="galleryPopThree" style="display: none;">
+    <h4>Rapid Charge Accessory</h4>
+    <p>Lorem ipsum dolor sit amet, sed in dicant imperdiet, possit labitur splendide sit ut. Eu dicam inimicus his, in eam inermis delicata theophrastus, dicit eruditi recusabo at sed. Cum id nisl euripidis, liber fabulas contentiones eum in, cu per ullum option vulputate. Expetenda interesset te mel, id usu viris sensibus, mei te perfecto accusata.</p>
+</div>
+<div id="galleryPopFour" style="display: none;">
+    <h4>USB-USBc Power Cable</h4>
+    <p>Lorem ipsum dolor sit amet, sed in dicant imperdiet, possit labitur splendide sit ut. Eu dicam inimicus his, in eam inermis delicata theophrastus, dicit eruditi recusabo at sed. Cum id nisl euripidis, liber fabulas contentiones eum in, cu per ullum option vulputate. Expetenda interesset te mel, id usu viris sensibus, mei te perfecto accusata.</p>
 </div>
 
 {{/partial}}
