--- a/templates/pages/custom/product/product-the-loop.html
+++ b/templates/pages/custom/product/product-the-loop.html
@@ -1,10 +1,11 @@
 {{#partial "page"}}
+<a name="top"></a>
 <div class="the-loop">
     <div class="container">
         <div class="row loop--nav">
             <ul class="loop--nav">
-                <li><a href="#overview" id="scrollToOverview"></a>Overview</li>
-                <li><a href="#specs" id="scrollToSpecs"></a>Tech Specs</li>
+                <li id="scrollToOverview"><a href="#"></a>Overview</li>
+                <li id="scrollToSpecs"><a href="#"></a>Tech Specs</li>
                 <li class="order"><a href="#"></a>Order</li>
             </ul>
         </div>
@@ -23,13 +24,42 @@
                 </div>
             </div>
         </div>
+        <div class="loop--pod row">
+            <h1 class="title">
+                The Loop Pods
+            </h1>
+            <h4 class="subtitle"> Many Flavors To Choose From! <span class="green">Sold Separately.</span></h4>
+            <div class="col-12">
+                <p class="description">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+            </div>
+            <div class="flavors">
+                <figure class="col-3">
+                    <img src="https://cdn8.bigcommerce.com/s-41vy970mga/images/stencil/400x400/products/126/509/menthol__14123.1528237325.png?c=2" alt="">
+                    <figcaption>Menthol</figcaption>
+                </figure>
+                <figure class="col-3">
+                    <img src="https://cdn8.bigcommerce.com/s-41vy970mga/images/stencil/400x400/products/125/508/tobacco__80233.1528237228.png?c=2" alt="">
+                    <figcaption>Classic Tobacco</figcaption>
+                </figure>
+                <figure class="col-3">
+                    <img src="https://cdn8.bigcommerce.com/s-41vy970mga/images/stencil/400x400/products/127/510/blueberry__79926.1528237395.png?c=2" alt="">
+                    <figcaption>Blueberry</figcaption>
+                </figure>
+                <figure class="col-3">
+                    <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/131/images/511/melon__51128.1528237499.1280.1280.png" alt="">
+                    <figcaption>Apple Melon</figcaption>
+                </figure>
+            </div>
+        </div>
         <div class="row loop--video">
             <div class="col-12">
                 <object class="vid" data="https://www.youtube.com/embed/cLtRhVpwOgA"
                         width="650" height="400"></object>
             </div>
         </div>
-        <div class="row loop-gallery">
+        <div class="hide-on-mobile row loop-gallery">
             <h1 class="title">
                 What's in the box
             </h1>
@@ -64,6 +94,58 @@
                          alt="picture one">
                     <figcaption>USB-USBc Power Cable</figcaption>
                 </figure>
+            </div>
+        </div>
+        <div class="hide-on-desktop row loop--slider">
+            <div class="slide-class">
+                <div class="card row">
+                    <div class="">
+                        <div class="image col-12">
+                            <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/522/RECHARGE_copy__67404.1530153514.1280.1280.png"
+                                 alt="picture one">
+                        </div>
+                        <div class="description col-12">
+                            <h3>2 Rechargeable Battery Sticks</h3>
+                            <p>Lorem ipsum dolor sit amet, sed in dicant imperdiet, possit labitur splendide sit ut. Eu dicam inimicus his, in eam inermis delicata theophrastus, dicit eruditi recusabo at sed. Cum id nisl euripidis, liber fabulas contentiones eum in, cu per ullum option vulputate. Expetenda interesset te mel, id usu viris sensibus, mei te perfecto accusata.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card row">
+                    <div class="">
+                        <div class="image col-12">
+                            <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/522/RECHARGE_copy__67404.1530153514.1280.1280.png"
+                                 alt="picture one">
+                        </div>
+                        <div class="description col-12">
+                            <h3>2 Rechargeable Battery Sticks</h3>
+                            <p>Lorem ipsum dolor sit amet, sed in dicant imperdiet, possit labitur splendide sit ut. Eu dicam inimicus his, in eam inermis delicata theophrastus, dicit eruditi recusabo at sed. Cum id nisl euripidis, liber fabulas contentiones eum in, cu per ullum option vulputate. Expetenda interesset te mel, id usu viris sensibus, mei te perfecto accusata.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card row">
+                    <div class="">
+                        <div class="image col-12">
+                            <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/522/RECHARGE_copy__67404.1530153514.1280.1280.png"
+                                 alt="picture one">
+                        </div>
+                        <div class="description col-12">
+                            <h3>2 Rechargeable Battery Sticks</h3>
+                            <p>Lorem ipsum dolor sit amet, sed in dicant imperdiet, possit labitur splendide sit ut. Eu dicam inimicus his, in eam inermis delicata theophrastus, dicit eruditi recusabo at sed. Cum id nisl euripidis, liber fabulas contentiones eum in, cu per ullum option vulputate. Expetenda interesset te mel, id usu viris sensibus, mei te perfecto accusata.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card row">
+                    <div class="">
+                        <div class="image col-12">
+                            <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/522/RECHARGE_copy__67404.1530153514.1280.1280.png"
+                                 alt="picture one">
+                        </div>
+                        <div class="description col-12">
+                            <h3>2 Rechargeable Battery Sticks</h3>
+                            <p>Lorem ipsum dolor sit amet, sed in dicant imperdiet, possit labitur splendide sit ut. Eu dicam inimicus his, in eam inermis delicata theophrastus, dicit eruditi recusabo at sed. Cum id nisl euripidis, liber fabulas contentiones eum in, cu per ullum option vulputate. Expetenda interesset te mel, id usu viris sensibus, mei te perfecto accusata.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="specs" class="row loop--specs">
@@ -107,23 +189,22 @@
         </div>
     </div>
 </div>
-<div id="galleryPopOne" style="display: none;">
+<div id="galleryPopOne" class="center" style="display: none;">
     <h4>2 Rechargeable Battery Sticks</h4>
     <p>Lorem ipsum dolor sit amet, sed in dicant imperdiet, possit labitur splendide sit ut. Eu dicam inimicus his, in eam inermis delicata theophrastus, dicit eruditi recusabo at sed. Cum id nisl euripidis, liber fabulas contentiones eum in, cu per ullum option vulputate. Expetenda interesset te mel, id usu viris sensibus, mei te perfecto accusata.</p>
 </div>
-<div id="galleryPopTwo" style="display: none;">
+<div id="galleryPopTwo" class="center" style="display: none;">
     <h4>Sleek Charging Case</h4>
     <p>Lorem ipsum dolor sit amet, sed in dicant imperdiet, possit labitur splendide sit ut. Eu dicam inimicus his, in eam inermis delicata theophrastus, dicit eruditi recusabo at sed. Cum id nisl euripidis, liber fabulas contentiones eum in, cu per ullum option vulputate. Expetenda interesset te mel, id usu viris sensibus, mei te perfecto accusata.</p>
 </div>
-<div id="galleryPopThree" style="display: none;">
+<div id="galleryPopThree" class="center" style="display: none;">
     <h4>Rapid Charge Accessory</h4>
     <p>Lorem ipsum dolor sit amet, sed in dicant imperdiet, possit labitur splendide sit ut. Eu dicam inimicus his, in eam inermis delicata theophrastus, dicit eruditi recusabo at sed. Cum id nisl euripidis, liber fabulas contentiones eum in, cu per ullum option vulputate. Expetenda interesset te mel, id usu viris sensibus, mei te perfecto accusata.</p>
 </div>
-<div id="galleryPopFour" style="display: none;">
+<div id="galleryPopFour" class="center" style="display: none;">
     <h4>USB-USBc Power Cable</h4>
     <p>Lorem ipsum dolor sit amet, sed in dicant imperdiet, possit labitur splendide sit ut. Eu dicam inimicus his, in eam inermis delicata theophrastus, dicit eruditi recusabo at sed. Cum id nisl euripidis, liber fabulas contentiones eum in, cu per ullum option vulputate. Expetenda interesset te mel, id usu viris sensibus, mei te perfecto accusata.</p>
 </div>
 
 {{/partial}}
-
 {{> layout/base}}
