--- a/assets/scss/custom/custom-the-loop.scss
+++ b/assets/scss/custom/custom-the-loop.scss
@@ -228,6 +228,59 @@
       }
     }
   }
+  .loop--pod {
+    position: relative;
+    max-width: 80%;
+    margin: 10px 8vw;
+    border: 2px solid;
+    border-left-color: lightgreen;
+    border-right-color: lightblue;
+    border-top-color: lightcoral;
+    border-bottom-color: sandybrown;
+    padding: 2px;
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px 2px #e8eff7;
+    figure {
+      height: auto;
+      margin: 10px;
+      img {
+        max-height: 100%;
+/*        height: 400px;
+        width: 400px;
+        @media only screen and (max-width: $breakpoint-small) {
+          max-height: 90%;
+          max-width: 90%;
+        }*/
+      }
+      figcaption {
+        text-align: center;
+        text-transform: capitalize;
+        font-size: 16px;
+        font-weight: bolder;
+      }
+    }
+    .description {
+      font-size: 1.32em;
+    }
+    h1, h4 {
+      text-align: center;
+      text-transform: capitalize;
+    }
+    h1.title {
+      font-weight: 600;
+      font-size: 2.3em;
+    }
+    h4.subtitle {
+      font-weight: 800;
+      font-style: italic;
+      font-size: 1.23em;
+      margin-top: 0 !important;
+    }
+    .green{
+      color: green;
+      font-weight: 800;
+    }
+  }
   .loop--video {
     position: relative;
     max-width: 80%;
@@ -276,6 +329,9 @@
       max-height: 100%;
       max-width: 100%;
     }
+    @include breakpoint($medium-only) {
+      display: none;
+    }
   }
   .loop--specs {
     position: relative;
@@ -301,6 +357,29 @@
     .spec-image {
       max-width: 100%;
       max-height: 100%;
+    }
+  }
+  .loop--slider{
+    text-align: center;
+    .card {
+      padding: 50px;
+      position: relative;
+      max-width: 80%;
+      margin: 50px 8vw;
+/*      border-radius: 5px;
+      box-shadow: 2px 2px 2px 2px #e7e7e7;*/
+      .image {
+        max-width: 60%;
+        margin-left: 20%;
+      }
+      .description {
+        font-size: 16px;
+        font-weight: 400;
+        h3 {
+          font-size: 1.83em;
+          font-weight: bolder;
+        }
+      }
     }
   }
   // Page elements end
